--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "compare-versions": "^3.6.0",
     "hlj-open-sdk": "^1.0.0-beta.12",
     "normalize.css": "^8.0.1",
+    "query-string": "^4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
